ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/139_no_name_suggestion.sol
contract c {
    fn g() public { fun(); }
}
// ----
// DeclarationError 7576: (39-42): Undeclared identifier.
